--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="/style.css" />
     <script src="./p5.min.js"></script>
+    <script language="javascript" type="text/javascript" src="p5.dom.js"></script> 
     <script defer src="/bundle.js"></script>
   </head>
   <body>
